Fixed neo4j launch script to use appropriate JVM flags